--- a/190428_RobotContest/190428_RobotContest.vcxproj.filters
+++ b/190428_RobotContest/190428_RobotContest.vcxproj.filters
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
     <ClCompile Include="robotcontest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="serialport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="manageexcel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,6 +40,12 @@
     <QtMoc Include="robotcontest.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="serialport.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="manageexcel.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="robotcontest.ui">
@@ -42,5 +56,16 @@
     <QtRcc Include="robotcontest.qrc">
       <Filter>Resource Files</Filter>
     </QtRcc>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="190428_RobotContest.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="hh.ico" />
   </ItemGroup>
 </Project>
