--- a/190428_RobotContest/190428_RobotContest.vcxproj.filters
+++ b/190428_RobotContest/190428_RobotContest.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="voicedeal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="deduectmarkswidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Resource Files">
@@ -62,6 +65,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="voicedeal.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="deduectmarkswidget.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
